commented api
