# docs/swagger.json
@@ -102,6 +102,23 @@
                         "description": "Фильтр по названию категории",
                         "name": "title",
                         "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Номер страницы",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 100,
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 20,
+                        "description": "Размер страницы",
+                        "name": "size",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -191,6 +208,23 @@
                         "description": "Фильтр по ID магазина",
                         "name": "id_shop",
                         "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Номер страницы",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 100,
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 20,
+                        "description": "Размер страницы",
+                        "name": "size",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -269,6 +303,23 @@
                         "description": "Фильтр по ID категории",
                         "name": "id_category",
                         "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Номер страницы",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 100,
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 20,
+                        "description": "Размер страницы",
+                        "name": "size",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -324,6 +375,23 @@
                         "default": "00000000-0000-0000-0000-000000000000",
                         "description": "Фильтр по ID пользователя",
                         "name": "id_user",
+                        "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Номер страницы",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 100,
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 20,
+                        "description": "Размер страницы",
+                        "name": "size",
                         "in": "query"
                     }
                 ],
@@ -536,7 +604,7 @@
                 }
             }
         },
-        "/user/user-posts": {
+        "/shops/{id_shop}/posts": {
             "post": {
                 "security": [
                     {
@@ -563,6 +631,14 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "ID магазина",
+                        "name": "id_shop",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "Данные нового поста",
                         "name": "request",
                         "in": "body",
@@ -581,7 +657,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/shops/{id_shop}/posts/{id_post}": {
             "delete": {
                 "security": [
                     {
@@ -608,13 +686,20 @@
                         "required": true
                     },
                     {
-                        "description": "Данные для удаления поста",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/reqresp.DeletePostRequest"
-                        }
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "ID магазина",
+                        "name": "id_shop",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "ID поста",
+                        "name": "id_post",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -628,52 +713,7 @@
                 }
             }
         },
-        "/user/user-products": {
-            "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Обновляет данные товара пользователя",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Изделия"
-                ],
-                "summary": "Обновить товар",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer токен",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Данные для обновления товара",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/reqresp.UpdateProductRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Товар успешно обновлен",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            },
+        "/shops/{id_shop}/products": {
             "post": {
                 "security": [
                     {
@@ -700,6 +740,14 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "ID магазина",
+                        "name": "id_shop",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "Данные нового товара",
                         "name": "request",
                         "in": "body",
@@ -712,6 +760,69 @@
                 "responses": {
                     "201": {
                         "description": "Товар успешно добавлен",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/shops/{id_shop}/products/{id_product}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Обновляет данные товара пользователя",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Изделия"
+                ],
+                "summary": "Обновить товар",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer токен",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "ID магазина",
+                        "name": "id_shop",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "ID изделия",
+                        "name": "id_product",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Данные для обновления товара",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/reqresp.UpdateProductRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Товар успешно обновлен",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -745,13 +856,20 @@
                         "required": true
                     },
                     {
-                        "description": "Данные для удаления товара",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/reqresp.DeleteProductRequest"
-                        }
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "ID магазина",
+                        "name": "id_shop",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "ID изделия",
+                        "name": "id_product",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -946,18 +1064,13 @@
         "reqresp.AddPostRequest": {
             "type": "object",
             "required": [
-                "description",
-                "shopID"
+                "description"
             ],
             "properties": {
                 "description": {
                     "type": "string",
                     "maxLength": 255,
                     "example": "Магазин сережек"
-                },
-                "shopID": {
-                    "type": "string",
-                    "example": "bb2e8400-e29b-41d4-a716-446655442222"
                 }
             }
         },
@@ -967,7 +1080,6 @@
                 "categoryIDs",
                 "cost",
                 "description",
-                "shopID",
                 "title"
             ],
             "properties": {
@@ -986,10 +1098,6 @@
                     "type": "string",
                     "maxLength": 255,
                     "example": "Магазин сережек"
-                },
-                "shopID": {
-                    "type": "string",
-                    "example": "bb2e8400-e29b-41d4-a716-446655442222"
                 },
                 "title": {
                     "type": "string",
@@ -1032,27 +1140,17 @@
                     "type": "string",
                     "example": "bb2e8400-e29b-41d4-a716-446655442222"
                 },
+                "page": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "size": {
+                    "type": "integer",
+                    "example": 20
+                },
                 "title": {
                     "type": "string",
                     "example": "Eco"
-                }
-            }
-        },
-        "reqresp.DeletePostRequest": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string",
-                    "example": "bb2e8400-e29b-41d4-a716-446655442222"
-                }
-            }
-        },
-        "reqresp.DeleteProductRequest": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string",
-                    "example": "bb2e8400-e29b-41d4-a716-446655442222"
                 }
             }
         },
@@ -1223,7 +1321,6 @@
                 "categoryIDs",
                 "cost",
                 "description",
-                "shopID",
                 "title"
             ],
             "properties": {
@@ -1242,14 +1339,6 @@
                     "type": "string",
                     "maxLength": 255,
                     "example": "Лучший магазин сережек"
-                },
-                "id": {
-                    "type": "string",
-                    "example": "bb2e8400-e29b-41d4-a716-446655442222"
-                },
-                "shopID": {
-                    "type": "string",
-                    "example": "bb2e8400-e29b-41d4-a716-446655442222"
                 },
                 "title": {
                     "type": "string",
