# internal/api/searcher_router.go
@@ -39,13 +39,29 @@ func NewSearcherRouter(router *gin.RouterGroup, searcherServ searcher.Searcher) 
 // @Accept json
 // @Produce json
 // @Param title query string false "Фильтр по названию категории"
+// @Param page query int false "Номер страницы" default(1) minimum(1)
+// @Param size query int false "Размер страницы" default(20) minimum(1) maximum(100)
 // @Success 200 {array} reqresp.CategoryResponse
 // @Router /categories [get]
 func (r *SearcherRouter) GetCategories(c *gin.Context) {
 	ctx := c.Request.Context()
 
+	page, err := strconv.ParseUint(c.Query("page"), 10, 64)
+	if err != nil || page == 0 {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	size, err := strconv.ParseUint(c.Query("size"), 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	offset := (page - 1) * size
+	limit := size
 	filterOps := reqresp.CategoryFilter{
-		Title: c.Query("title"),
+		Title:  c.Query("title"),
+		Offset: offset,
+		Limit:  limit,
 	}
 
 	caterories, err := r.searcherServ.GetCategories(ctx, &filterOps)
@@ -100,6 +116,8 @@ func (r *SearcherRouter) GetCategoryByID(c *gin.Context) {
 // @Produce json
 // @Param title query string false "Фильтр по названию магазина"
 // @Param id_user query string false "Фильтр по ID пользователя" format(uuid) default(00000000-0000-0000-0000-000000000000)
+// @Param page query int false "Номер страницы" default(1) minimum(1)
+// @Param size query int false "Размер страницы" default(20) minimum(1) maximum(100)
 // @Success 200 {array} reqresp.ShopResponse
 // @Router /shops [get]
 func (r *SearcherRouter) GetShops(c *gin.Context) {
@@ -110,9 +128,23 @@ func (r *SearcherRouter) GetShops(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
+	page, err := strconv.ParseUint(c.Query("page"), 10, 64)
+	if err != nil || page == 0 {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	size, err := strconv.ParseUint(c.Query("size"), 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	offset := (page - 1) * size
+	limit := size
 	filterOps := reqresp.ShopFilter{
 		Title:  c.Query("title"),
 		UserID: userID,
+		Offset: offset,
+		Limit:  limit,
 	}
 
 	shops, err := r.searcherServ.GetShops(ctx, &filterOps)
@@ -170,6 +202,8 @@ func (r *SearcherRouter) GetShopByID(c *gin.Context) {
 // @Param max_cost query integer false "Максимальная цена товара" default(100000)
 // @Param id_shop query string false "Фильтр по ID магазина" format(uuid) default(00000000-0000-0000-0000-000000000000)
 // @Param id_category query string false "Фильтр по ID категории" format(uuid) default(00000000-0000-0000-0000-000000000000)
+// @Param page query int false "Номер страницы" default(1) minimum(1)
+// @Param size query int false "Размер страницы" default(20) minimum(1) maximum(100)
 // @Success 200 {array} reqresp.ProductResponse "Список товаров"
 // @Failure 400 {object} map[string]interface{} "Неверный формат параметров"
 // @Failure 500 {object} map[string]interface{} "Внутренняя ошибка сервера"
@@ -197,12 +231,26 @@ func (r *SearcherRouter) GetProducts(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
+	page, err := strconv.ParseUint(c.Query("page"), 10, 64)
+	if err != nil || page == 0 {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	size, err := strconv.ParseUint(c.Query("size"), 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	offset := (page - 1) * size
+	limit := size
 	filterOps := reqresp.ProductFilter{
 		Title:      c.Query("title"), // default = ""
 		MaxCost:    maxCost,
 		MinCost:    minCost,
 		ShopID:     shopID,
 		CategoryID: categoryID,
+		Offset:     offset,
+		Limit:      limit,
 	}
 
 	products, err := r.searcherServ.GetProducts(ctx, &filterOps)
@@ -224,6 +272,8 @@ func (r *SearcherRouter) GetProducts(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id_shop query string false "Фильтр по ID магазина" format(uuid)
+// @Param page query int false "Номер страницы" default(1) minimum(1)
+// @Param size query int false "Размер страницы" default(20) minimum(1) maximum(100)
 // @Success 200 {array} reqresp.PostResponse "Список постов"
 // @Failure 400 {object} map[string]interface{} "Неверный формат ID магазина"
 // @Failure 500 {object} map[string]interface{} "Внутренняя ошибка сервера"
@@ -236,8 +286,22 @@ func (r *SearcherRouter) GetPosts(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
+	page, err := strconv.ParseUint(c.Query("page"), 10, 64)
+	if err != nil || page == 0 {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	size, err := strconv.ParseUint(c.Query("size"), 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	offset := (page - 1) * size
+	limit := size
 	filterOps := reqresp.PostFilter{
 		ShopID: shopID,
+		Offset: offset,
+		Limit:  limit,
 	}
 
 	posts, err := r.searcherServ.GetPosts(ctx, &filterOps)
@@ -251,84 +315,3 @@ func (r *SearcherRouter) GetPosts(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, resp)
 }
-
-// // GetShopPosts godoc
-// // @Summary Получить посты магазина
-// // @Description Возвращает список постов указанного магазина
-// // @Tags Поиск
-// // @Accept json
-// // @Produce json
-// // @Param id_shop path string true "ID магазина" format(uuid)
-// // @Success 200 {array} reqresp.PostResponse
-// // @Router /shops/{id_shop}/posts [get]
-// func (r *SearcherRouter) GetShopPosts(c *gin.Context) {
-// 	ctx := c.Request.Context()
-
-// 	shopID, err := uuid.Parse(c.Param("id_shop"))
-// 	if err != nil {
-// 		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid id_shop format"})
-// 		return
-// 	}
-
-// 	posts, err := r.searcherServ.GetPosts(ctx, shopID)
-// 	if err != nil {
-// 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-// 		return
-// 	}
-// 	resp := make([]reqresp.PostResponse, len(posts))
-// 	for i, v := range posts {
-// 		resp[i] = v.ToResponse()
-// 	}
-// 	c.JSON(http.StatusOK, resp)
-// }
-
-// // GetShopProducts godoc
-// // @Summary Получить товары магазина
-// // @Description Возвращает список товаров указанного магазина с возможностью фильтрации
-// // @Tags Поиск
-// // @Accept json
-// // @Produce json
-// // @Param id_shop path string true "ID магазина" format(uuid)
-// // @Param title query string false "Фильтр по названию товара"
-// // @Param max_cost query integer false "Максимальная цена товара" default(100000)
-// // @Param min_cost query integer false "Минимальная цена товара" default(0)
-// // @Success 200 {array} reqresp.ProductResponse
-// // @Router /shops/{id_shop}/products [get]
-// func (r *SearcherRouter) GetShopProducts(c *gin.Context) {
-// 	ctx := c.Request.Context()
-
-// 	shopID, err := uuid.Parse(c.Param("id_shop"))
-// 	if err != nil {
-// 		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid id_shop format"})
-// 		return
-// 	}
-
-// 	maxCost, err := strconv.ParseUint(c.Query("max_cost"), 10, 64)
-// 	if err != nil {
-// 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-// 		return
-// 	}
-// 	minCost, err := strconv.ParseUint(c.Query("min_cost"), 10, 64)
-// 	if err != nil {
-// 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-// 		return
-// 	}
-// 	filterOps := reqresp.ProductFilter{
-// 		Title:      c.Query("title"),
-// 		MaxCost:    maxCost,
-// 		MinCost:    minCost,
-// 		ShopID:     shopID,
-// 		CategoryID: uuid.Nil,
-// 	}
-
-// 	products, err := r.searcherServ.GetProducts(ctx, &filterOps)
-// 	if err != nil {
-// 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-// 		return
-// 	}
-// 	resp := make([]reqresp.ProductResponse, len(products))
-// 	for i, v := range products {
-// 		resp[i] = v.ToResponse()
-// 	}
-// 	c.JSON(http.StatusOK, resp)
-// }
