# internal/models/req_resp/post.go
@@ -7,13 +7,7 @@ import (
 )
 
 type AddPostRequest struct {
-	Description string    `json:"description" binding:"required,max=255" example:"Магазин сережек"`
-	ShopID      uuid.UUID `json:"shopID" binding:"required,uuid" example:"bb2e8400-e29b-41d4-a716-446655442222"`
-}
-
-type UpdatePostRequest struct {
-	Description string    `json:"description" binding:"required,max=255" example:"Лучший магазин сережек"`
-	ShopID      uuid.UUID `json:"shopID" binding:"required,uuid" example:"bb2e8400-e29b-41d4-a716-446655442222"`
+	Description string `json:"description" binding:"required,max=255" example:"Магазин сережек"`
 }
 
 type PostResponse struct {
@@ -23,6 +17,6 @@ type PostResponse struct {
 	ShopID          uuid.UUID `json:"shopID" binding:"required,uuid" example:"bb2e8400-e29b-41d4-a716-446655442222"`
 }
 
-type DeletePostRequest struct {
-	ID string `json:"id" example:"bb2e8400-e29b-41d4-a716-446655442222"`
-}
+// type DeletePostRequest struct {
+// 	ID string `json:"id" example:"bb2e8400-e29b-41d4-a716-446655442222"`
+// }
